--- a/noticias.html
+++ b/noticias.html
@@ -1,3 +1,14 @@
+<!--
+    Nombre: Ion Cerezo
+    Fecha: 25/11/2024
+    Módulo: Desarrollo de aplicaciones web.
+    UD: 02
+    Asignatura: Lenguaje de marcas y Sistemas de gestión de la información
+    Nombre del ejercicio:Tarea evaluativa 2 (80%). Sitio Web.
+    Tarea autoevaluativa: https://docs.google.com/document/d/11JveQvr8HGPq1ICYHrsq930XggfOiEMksCTdbK8_ATw/edit?usp=sharing
+    Código en vivo: https://ioncerezo.github.io/LMSGI02TE02/
+-->
+    
 <!DOCTYPE html>
 <html lang="es">
 
