--- a/detalle-producto1.html
+++ b/detalle-producto1.html
@@ -11,86 +11,116 @@
 
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detalles del Producto - Cafetera italiana Molinnetti</title>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Barra de navegación -->
     <nav>
-        <section>
-            <a href="index.html">Inicio</a>
-            <a href="noticias.html">Noticias</a>
-            <a class="bold" href="productos.html">Productos</a>
-            <a href="contacto.html">Contacto</a>
-        </section>
-        <img src="images/logo.png"
-            alt="Logo de la tienda de cafe. Vista cenital de una taza de cafe con un grano dentro en un estilo minimalista">
-        <section>
-            <p><img src="images/icono-telefono.png" alt="Icono de un teléfono móvil"> +34 <span class="italic">644 97 18
-                    68</span></p>
-        </section>
+      <section>
+        <a href="index.html">Inicio</a>
+        <a href="noticias.html">Noticias</a>
+        <a class="bold" href="productos.html">Productos</a>
+        <a href="contacto.html">Contacto</a>
+      </section>
+      <img
+        src="images/logo.png"
+        alt="Logo de la tienda de cafe. Vista cenital de una taza de cafe con un grano dentro en un estilo minimalista"
+      />
+      <section>
+        <p>
+          <img
+            src="images/icono-telefono.png"
+            alt="Icono de un teléfono móvil"
+          />
+          +34 <span class="italic">644 97 18 68</span>
+        </p>
+      </section>
     </nav>
 
     <main>
-        <!-- Detalle del Producto -->
-        <section class="seccion-producto">
-            <article class="contenido-producto">
-                <h1>Cafetera italiana Molinnetti</h1>
-                <h4>CAFETERAS</h4>
-                <h3>25€</h3>
-                <p>Prepara un espresso auténtico en casa con esta cafetera italiana clásica. Fabricada en aluminio para
-                    una
-                    distribución uniforme del calor, extrae un café rico y aromático en minutos. Ideal para amantes del
-                    café, es
-                    fácil de usar y perfecta para cualquier cocina.</p>
-                <table>
-                    <tr>
-                        <th>DETALLES</th>
-                    </tr>
-                    <tr>
-                        <td><span class="bold">Capacidad:</span> 6 tazas de espresso</td>
-                    </tr>
-                    <tr>
-                        <td><span class="bold">Peso:</span> 0.7 kg</td>
-                    </tr>
-                    <tr>
-                        <td><span class="bold">Dimensiones: </span>20 cm de alto, 10 cm de ancho y 8 cm de profundidad
-                        </td>
-                    </tr>
-                </table>
-                <a href="productos.html" class="italic">< Volver a todos los productos</a>
-            </article>
+      <!-- Detalle del Producto -->
+      <section class="seccion-producto">
+        <article class="contenido-producto">
+          <h1>Cafetera italiana Molinnetti</h1>
+          <h4>CAFETERAS</h4>
+          <h3>25€</h3>
+          <p>
+            Prepara un espresso auténtico en casa con esta cafetera italiana
+            clásica. Fabricada en aluminio para una distribución uniforme del
+            calor, extrae un café rico y aromático en minutos. Ideal para
+            amantes del café, es fácil de usar y perfecta para cualquier cocina.
+          </p>
+          <table>
+            <tr>
+              <th>DETALLES</th>
+            </tr>
+            <tr>
+              <td><span class="bold">Capacidad:</span> 6 tazas de espresso</td>
+            </tr>
+            <tr>
+              <td><span class="bold">Peso:</span> 0.7 kg</td>
+            </tr>
+            <tr>
+              <td>
+                <span class="bold">Dimensiones: </span>20 cm de alto, 10 cm de
+                ancho y 8 cm de profundidad
+              </td>
+            </tr>
+          </table>
+          <a href="productos.html" class="italic"
+            >< Volver a todos los productos</a
+          >
+        </article>
 
-            <img src="images/productos/producto-7">
-
-        </section>
+        <img src="images/productos/producto-7" />
+      </section>
     </main>
 
     <!--Footer-->
     <footer>
-        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><span
-                property="dct:title">Página</span> creada por <span property="cc:attributionName">Ion Cerezo
-                Valero -</span> Marcada como <a href="https://creativecommons.org/publicdomain/zero/1.0/?ref=chooser-v1"
-                target="_blank" rel="license noopener noreferrer">CC0 1.0</a></p>
+      <p
+        xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:dct="http://purl.org/dc/terms/"
+      >
+        <span property="dct:title">Página</span> creada por
+        <span property="cc:attributionName">Ion Cerezo Valero -</span> Marcada
+        como
+        <a
+          href="https://creativecommons.org/publicdomain/zero/1.0/?ref=chooser-v1"
+          target="_blank"
+          rel="license noopener noreferrer"
+          >CC0 1.0</a
+        >
+      </p>
 
-        <ul class="footer-redes-sociales">
-            <li><a href="www.twitter.com" target="_blank"><img src="images/logo-x.png" alt="logo de X"> Twitter / X</a>
-            </li>
-            <li><a href="www.instagram.com" target="_blank"><img src="images/logo-instagram.png"
-                        alt="logo de Instagram"> Instagram</a></li>
-            <li><a href="www.tiktok.com" target="_blank"><img src="images/logo-tiktok.png" alt="logo de Tik-tok">
-                    Tik-tok</a></li>
-        </ul>
+      <ul class="footer-redes-sociales">
+        <li>
+          <a href="www.twitter.com" target="_blank"
+            ><img src="images/logo-x.png" alt="logo de X" /> Twitter / X</a
+          >
+        </li>
+        <li>
+          <a href="www.instagram.com" target="_blank"
+            ><img src="images/logo-instagram.png" alt="logo de Instagram" />
+            Instagram</a
+          >
+        </li>
+        <li>
+          <a href="www.tiktok.com" target="_blank"
+            ><img src="images/logo-tiktok.png" alt="logo de Tik-tok" />
+            Tik-tok</a
+          >
+        </li>
+      </ul>
     </footer>
-</body>
-
+  </body>
 </html>
