add meta copyright

--- a/detalle-producto1.html
+++ b/detalle-producto1.html
@@ -15,6 +15,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="copyright"
+      content="Recursos visuales y multimedia bajo licencia CC0 1.0, proporcionados por Pexels."
+    />
     <title>Detalles del Producto - Cafetera italiana Molinnetti</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
